# rustyVault

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev.sh  flake.nix  justfile
.github/workflows/: windows-build.yml
docs/: banner.txt
src/: key_store.rs  lib.rs  main.rs  tpm.rs
src/cloud/: error.rs  mod.rs
src/cloud/aws/: kms.rs  mod.rs
src/cloud/azure/: kms.rs  mod.rs  vault.rs
src/cloud/gcp/: kms.rs  mod.rs
tests/: cloud_tests.rs  ssh_agent_tests.rs  test_utils.rs
