[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Security_Cryptography", "Win32_System_Threading", "Win32_Foundation"] }
rsa = "0.6.0"
ed25519-dalek = "1.0.1"
rand = "0.8"
rand_core = "0.5.1"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.10"
aes-gcm = "0.10.3"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lib]
name = "windows_ssh_agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"
