[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Security_Cryptography", "Win32_System_Threading", "Win32_Foundation"] }
rsa = { version = "0.9.7", features = ["sha2"] }
ed25519-dalek = "2.1.1"
rand = "0.8"
rand_core = "0.6.4"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11.6"
aes-gcm = "0.10.3"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
colored = "3.0.0"
figlet-rs = "0.1.5"
tokio = { version = "1.36", features = ["full"] }
ring = "0.17.8"
sha2 = "0.10"
parking_lot = "0.12"
async-trait = "0.1"
azure_security_keyvault = { version = "0.21.0", features = ["enable_reqwest"] }
aws-sdk-kms = { version = "1.57.0", features = ["rt-tokio"] }
aws-sdk-secretsmanager = { version = "1.3", features = ["rt-tokio"] }
google-cloud-kms = { version = "0.6.0", features = ["auth"] }
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-types = "1.0"
chrono = "0.4"
crc32c = "0.6"
google-cloud-googleapis = { version = "0.16.0", features = ["kms"] }
[lib]
name = "windows_ssh_agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"
